prevent users from releasing all pomeranians

--- a/frontend/src/pages/InventoryPage/InventoryPage.css
+++ b/frontend/src/pages/InventoryPage/InventoryPage.css
@@ -385,3 +385,14 @@
     font-size: 1rem;
   }
 }
+
+/* Remove the spin buttons from number inputs */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
